Finished first build of main page
Added properly scaled sprites and basic interaction script

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<title>David Robideau</title>
 		<link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet' type='text/css'>
 		<link href='Styles/main.css' rel='stylesheet' type='text/css'>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+		<script type="text/javascript" src="Scripts/interaction.js"></script>
 	</head>
 
 	<body>
@@ -13,8 +15,12 @@
 			<h2>Computer Engineer</h2>
 		</div>
 		<div id="sprites">
-			<img ref=
+			<img src='Sprites/David-large.png' style="width:30%;height:30%" id="about">
+			<img src='Sprites/PC-large.png' style="width:25%;height:25%" id="projects">
+			<img src='Sprites/Phone-large.png' style="width:15%;height:15%" id="contact">
 		</div>
+		<div id="selector">
+			<h3 id="selector-text"></h3>
 	</body>
 
 	<footer>
