Finished first build of about page
Added appropriate links, updated nav menu

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<title>David Robideau</title>
-		<link href='Styles/main.css' rel='stylesheet' type='text/css'>
+		<link href='Styles/about.css' rel='stylesheet' type='text/css'>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<script type="text/javascript" src="Scripts/interaction.js"></script>
 		<script type="text/javascript" src="Scripts/navigation.js"></script>
@@ -12,15 +12,15 @@
 	<body vlink="black">
 		<div id="jumbotron">
 			<h1>David Robideau</h1>
-			<h2>Computer Engineer</h2>
+			<h2>About</h2>
 		</div>
-		<div id="sprites">
-			<a href="about.html"><img src='Sprites/David-large.png' style="width:30%;height:30%" id="about" ref="about.html"></a>
-			<img src='Sprites/PC-large.png' style="width:25%;height:25%" id="projects">
-			<img src='Sprites/Phone-large.png' style="width:15%;height:15%" id="contact">
+		<div id="profile">
+			<img src='Images/Profile.jpg' style="width:30%;height:30%" id="profile-image">
+			<p>< (that's me)</p>
 		</div>
-		<div id="selector">
-			<h3 id="selector-text"></h3>
+		<div id="about">
+			<p id="about-text">Hello! My name is David Robideau. I'm a junior in computer engineering at Iowa State University. I live in Ames, Iowa, where I work at Iowa Public Radio. I'm a huge music nerd, bookworm, virtual reality enthusiast, and all-around geek. If you'd like to get ahold of me, or get more information about my professional credentials, click <a href="index.html">here.</a></p>
+			<p id="website-info">This site was made with HTML5, CSS3, and plain ol' JQuery.</p>
 		</div>
 	</body>
 
