Set up skeletons for remaining top level pages

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<title>David Robideau</title>
-		<link href='Styles/main.css' rel='stylesheet' type='text/css'>
+		<link href='Styles/about.css' rel='stylesheet' type='text/css'>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<script type="text/javascript" src="Scripts/interaction.js"></script>
 		<script type="text/javascript" src="Scripts/navigation.js"></script>
@@ -12,15 +12,7 @@
 	<body vlink="black">
 		<div id="jumbotron">
 			<h1>David Robideau</h1>
-			<h2>Computer Engineer</h2>
-		</div>
-		<div id="sprites">
-			<a href="about.html"><img src='Sprites/David-large.png' style="width:30%;height:30%" id="about" ref="about.html"></a>
-			<a href="projects.html"><img src='Sprites/PC-large.png' style="width:25%;height:25%" id="projects"></a>
-			<a href="contact.html"><img src='Sprites/Phone-large.png' style="width:15%;height:15%" id="contact"></a>
-		</div>
-		<div id="selector">
-			<h3 id="selector-text"></h3>
+			<h2>Contact</h2>
 		</div>
 	</body>
 
