--- a/projects.html
+++ b/projects.html
@@ -12,12 +12,10 @@
 	<body vlink="black">
 		<div id="jumbotron">
 			<h1>David Robideau</h1>
-			<h2>Computer Engineer</h2>
+			<h2>Projects</h2>
 		</div>
 		<div id="sprites">
-			<a href="about.html"><img src='Sprites/David-large.png' style="width:30%;height:30%" id="about" ref="about.html"></a>
-			<a href="projects.html"><img src='Sprites/PC-large.png' style="width:25%;height:25%" id="projects"></a>
-			<a href="contact.html"><img src='Sprites/Phone-large.png' style="width:15%;height:15%" id="contact"></a>
+			
 		</div>
 		<div id="selector">
 			<h3 id="selector-text"></h3>
