--- a/about.html
+++ b/about.html
@@ -19,20 +19,20 @@
 			<p>< (that's me)</p>
 		</div>
 		<div id="about">
-			<p id="about-text">Hello! My name is David Robideau. I'm a junior in computer engineering at Iowa State University. I live in Ames, Iowa, where I work at Iowa Public Radio. I'm a huge music nerd, bookworm, virtual reality enthusiast, and all-around geek. If you'd like to get ahold of me, or get more information about my professional credentials, click <a href="index.html">here.</a></p>
+			<p id="about-text">Hello! My name is David Robideau. I'm a junior in computer engineering at Iowa State University. I live in Ames, Iowa, where I work at Iowa Public Radio. I'm a huge music nerd, bookworm, virtual reality enthusiast, and all-around geek. If you'd like to get ahold of me, or get more information about my professional credentials, click <a href="contact.html">here.</a></p>
 			<p id="website-info">This site was made with HTML5, CSS3, and plain ol' JQuery.</p>
 		</div>
 	</body>
 
-	<footer>
+	<footer vlink="black">
 		<div id="navigation">
 			<h4><a href="index.html">Home</a></h4>
 			<h4>|</h4>
 			<h4><a href="about.html">About</a></h4>
 			<h4>|</h4>
-			<h4>Projects</h4>
+			<h4><a href="projects.html">Projects</a></h4>
 			<h4>|</h4>
-			<h4>Contact</h4>
+			<h4><a href="contact.html">Contact</a></h4>
 			<h4> --- </h4>
 			<h4 id="navigation-text">Navigation ></h4>
 		</div>
