Added contact page, cleaned up home and about pages
Also added current resume and new sprites

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 		<script type="text/javascript" src="Scripts/navigation.js"></script>
 	</head>
 
-	<body vlink="black">
+	<body vlink="blue">
 		<div id="jumbotron">
 			<h1>David Robideau</h1>
 			<h2>About</h2>
@@ -19,7 +19,7 @@
 			<p>< (that's me)</p>
 		</div>
 		<div id="about">
-			<p id="about-text">Hello! My name is David Robideau. I'm a junior in computer engineering at Iowa State University. I live in Ames, Iowa, where I work at Iowa Public Radio. I'm a huge music nerd, bookworm, virtual reality enthusiast, and all-around geek. If you'd like to get ahold of me, or get more information about my professional credentials, click <a href="contact.html">here.</a></p>
+			<p id="about-text">Hello! My name is David Robideau. I'm a junior in computer engineering at Iowa State University. I live in Ames, Iowa, where I work at Iowa Public Radio. I'm a huge music nerd, bookworm, virtual reality enthusiast and all-around geek. If you'd like to get in touch with me or get more info about my professional credentials, click <a href="contact.html">here.</a></p>
 			<p id="website-info">This site was made with HTML5, CSS3, and plain ol' JQuery.</p>
 		</div>
 	</body>
