--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,29 @@
 		<title>David Robideau</title>
 		<link href='Styles/about.css' rel='stylesheet' type='text/css'>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-		<script type="text/javascript" src="Scripts/interaction.js"></script>
 		<script type="text/javascript" src="Scripts/navigation.js"></script>
 	</head>
 
-	<body vlink="black">
+	<body vlink="blue">
 		<div id="jumbotron">
 			<h1>David Robideau</h1>
 			<h2>Contact</h2>
+		</div>
+		<div id="resume">
+			<a href="DavidRobideauResume1115.docx" target="_blank"><img src="Sprites/Resume-large.png" style="width:10%;height:10%"></a>
+			<p>Resume - <a href="DavidRobideauResume1115.docx" target="_blank">.doc</a>  <a href="DavidRobideauResume1115.pdf" target="_blank">.pdf</a></p>
+		</div>
+		<div id="mail">
+			<a href="mailto:robideau@iastate.edu"><img src="Sprites/Mail-large.png" style="width:7%;height:7%"></a>
+			<p>Mail - <a href="mailto:robideau@iastate.edu">robideau@iastate.edu</a></p>
+		</div>
+		<div id="phone">
+			<a href="tel:17128878816"><img src="Sprites/Phone-large.png" style="width:7%;height:7%"></a>
+			<p>Phone - <a href="tel:17128878816">(712)-887-8816</a></p>
+		</div>
+		<div id="github">
+			<a href="http://www.github.com/robideau"><img src="Sprites/Github-large.png" style="width:7%;height:7%"></a>
+			<p>Github - <a href="http://www.github.com/robideau">robideau</a></p>
 		</div>
 	</body>
 
