--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 		<script type="text/javascript" src="Scripts/navigation.js"></script>
 	</head>
 
-	<body vlink="black">
+	<body vlink="blue">
 		<div id="jumbotron">
 			<h1>David Robideau</h1>
 			<h2>Computer Engineer</h2>
 		</div>
 		<div id="sprites">
-			<a href="about.html"><img src='Sprites/David-large.png' style="width:30%;height:30%" id="about" ref="about.html"></a>
+			<a href="about.html"><img src='Sprites/David-large.png' style="width:30%;height:30%" id="about"></a>
 			<a href="projects.html"><img src='Sprites/PC-large.png' style="width:25%;height:25%" id="projects"></a>
 			<a href="contact.html"><img src='Sprites/Phone-large.png' style="width:15%;height:15%" id="contact"></a>
 		</div>
@@ -24,7 +24,7 @@
 		</div>
 	</body>
 
-	<footer vlink="black">
+	<footer vlink="blue">
 		<div id="navigation">
 			<h4><a href="index.html">Home</a></h4>
 			<h4>|</h4>
