--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 		<script type="text/javascript" src="Scripts/navigation.js"></script>
 	</head>
 
-	<body vlink="black">
+	<body vlink="blue">
 		<div id="jumbotron">
 			<h1>David Robideau</h1>
 			<h2>Projects</h2>
