Created remaining project pages
Added appropriate links

--- a/ethics.html
+++ b/ethics.html
@@ -2,8 +2,8 @@
 <html>
 
 	<head>
-		<title>David Robideau - Projects</title>
-		<link href='Styles/main.css' rel='stylesheet' type='text/css'>
+		<title>David Robideau - IEEE Ethics Discussion</title>
+		<link href='Styles/about.css' rel='stylesheet' type='text/css'>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<script type="text/javascript" src="Scripts/interaction.js"></script>
 		<script type="text/javascript" src="Scripts/navigation.js"></script>
@@ -12,15 +12,15 @@
 	<body vlink="blue">
 		<div id="jumbotron">
 			<h1><a href="index.html" style="color: #000000; text-decoration: none">David Robideau</a></h1>
-			<h2>Projects</h2>
+			<h2>IEEE Ethics Discussion</h2>
 		</div>
-		<div id="project-sprites">
-			<a href="musicshelf.html"><img src='Sprites/Rift-large.png' style="width:20%;height:20%" id="rift"></a>
-			<a href="rover.html"><img src='Sprites/Rover-large.png' style="width:20%;height:20%" id="rover"></a>
-			<a href="ethics.html"><img src='Sprites/Resume-large.png' style="width:20%;height:20%" id="essay"></a>
+		<div id="profile">
+			<img src='Sprites/Resume-large.png' style="width:40%;height:40%" id="project-image">
 		</div>
-		<div id="selector">
-			<h3 id="selector-text"></h3>
+		<div id="project">
+			<p><a href="IEEEEthics.docx">.doc</a></p>
+			<p>---</p>
+			<p id="about-text">This is an essay I wrote following a discussion of the <a href="http://www.ieee.org/about/corporate/governance/p7-8.html">IEEE Code of Ethics</a> in my CprE 394 class. In this essay, I describe my own code of ethics, what I believe it means to "be ethical", and my interpretation of this code with respect to a real-world scenario.</p>
 		</div>
 	</body>
 
