First test build of site
It’s ugly, but it’s here!

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<body vlink="blue">
 		<div id="jumbotron">
-			<h1>David Robideau</h1>
+			<h1><a href="index.html" style="color: #000000; text-decoration: none">David Robideau</a></h1>
 			<h2>Computer Engineer</h2>
 		</div>
 		<div id="sprites">
