--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-		<title>David Robideau</title>
+		<title>David Robideau - About</title>
 		<link href='Styles/about.css' rel='stylesheet' type='text/css'>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<script type="text/javascript" src="Scripts/interaction.js"></script>
@@ -11,7 +11,7 @@
 
 	<body vlink="blue">
 		<div id="jumbotron">
-			<h1>David Robideau</h1>
+			<h1><a href="index.html" style="color: #000000; text-decoration: none">David Robideau</a></h1>
 			<h2>About</h2>
 		</div>
 		<div id="profile">
