--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-		<title>David Robideau</title>
+		<title>David Robideau - Contact</title>
 		<link href='Styles/about.css' rel='stylesheet' type='text/css'>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<script type="text/javascript" src="Scripts/navigation.js"></script>
@@ -10,7 +10,7 @@
 
 	<body vlink="blue">
 		<div id="jumbotron">
-			<h1>David Robideau</h1>
+			<h1><a href="index.html" style="color: #000000; text-decoration: none">David Robideau</a></h1>
 			<h2>Contact</h2>
 		</div>
 		<div id="resume">
