--- a/ethics.html
+++ b/ethics.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>David Robideau - IEEE Ethics Discussion</title>
 		<link href='Styles/about.css' rel='stylesheet' type='text/css'>
+		<link rel="shortcut icon" href="Sprites/David-head-large.png">
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<script type="text/javascript" src="Scripts/interaction.js"></script>
 		<script type="text/javascript" src="Scripts/navigation.js"></script>
