Added MusicShelf screenshots, hidden Golf test build

--- a/musicshelf.html
+++ b/musicshelf.html
@@ -20,6 +20,7 @@
 		</div>
 		<div id="project">
 			<p><a href="https://github.com/robideau/musicshelf">Github</a></p>
+			<p>Screenshots - <a href="Images/MSScreen1.png">(1)</a> | <a href="Images/MSScreen2.png">(2)</a> | <a href="Images/MSScreen3.png">(3)</a> | <a href="Images/MSScreen4.png">(4)</a> | <a href="Images/MSScreen5.png">(5)</a></p>
 			<p>---</p>
 			<p id="about-text">MusicShelf (name obviously pending) is a <a href="https://unity3d.com">Unity</a>-based music library and visualization software developed with the <a href="https://www.oculus.com/en-us/">Oculus Rift</a> and other VR hardware in mind. Consider the project split into two major halves - the first half being the "library" portion which reads, indexes, and stores all of the user's desired music files and presents them in a "bookshelf" fashion. This shelf will allow the user to search through their music and access it in a visually pleasing format with intuitive VR-focused controls. Ideally the only interactions will be through the camera direction and a very limited set of controller/keyboard keys.</p>
 			<p>The second half of the project consists of a randomly-seeded visualization software. Think Windows Media Player visuals but on a larger, more varied scale. The visuals will eventually tailor themselves to the songs or albums chosen by the user. Visualizations will be consistent across different systems; each song will have unique visuals but will be replicable on other machines provided the same source files are used.</p>
