--- a/about.html
+++ b/about.html
@@ -16,11 +16,11 @@
 			<h2>About</h2>
 		</div>
 		<div id="profile">
-			<img src='Images/Profile.jpg' style="width:30%;height:30%" id="profile-image">
-			<p>< (that's me)</p>
+			<img src='Images/headshot-cropped.png' style="width:30%;height:30%" id="profile-image">
 		</div>
 		<div id="about">
-			<p id="about-text">Hello! My name is David Robideau. I'm a junior in computer engineering at Iowa State University. I live in Ames, Iowa, where I work at Iowa Public Radio. I'm a huge music nerd, bookworm, virtual reality enthusiast and all-around geek. If you'd like to get in touch with me or get more info about my professional credentials, click <a href="contact.html">here.</a></p>
+			<p id="about-text">Hello! My name is David Robideau. I'm a senior in computer engineering (with a focus on software systems) at Iowa State University. I live in Ames, Iowa, where I'm a software engineering intern at Parametric Studio, Inc. I'm a virtual reality enthusiast, avid music fan, and all-around nerd. If you'd like to get in touch with me or get more info about my credentials, click <a href="contact.html">here.</a></p>
+			<p id="about-text">	Most of my professional work has been with the Unity 3D engine. I have a deep passion for virtual reality technology, and I taught myself how to use the engine along with C# as a means to develop my own VR applications. In the future, I'd like to secure a position that enables me to use both my low-level computing knowledge and my in-engine skills to work on consumer VR applications.</p>
 			<p id="website-info">This site was made with HTML5, CSS3, and plain ol' JQuery.</p>
 		</div>
 	</body>
@@ -38,7 +38,7 @@
 			<h4 id="navigation-text">Navigation ></h4>
 		</div>
 		<div id="legal">
-			(c) David Robideau 2015. All rights reserved.
+			(c) David Robideau 2016. All rights reserved.
 		</div>
 	</footer>
 
