--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,8 @@
 			<h2>Contact</h2>
 		</div>
 		<div id="resume">
-			<a href="DavidRobideauResume1115.docx" target="_blank"><img src="Sprites/Resume-large.png" style="width:10%;height:10%"></a>
-			<p>Resume - <a href="DavidRobideauResume1115.docx" target="_blank">.doc</a>  <a href="DavidRobideauResume1115.pdf" target="_blank">.pdf</a></p>
+			<a href="DavidRobideau_Resume_S2016.docx" target="_blank"><img src="Sprites/Resume-large.png" style="width:10%;height:10%"></a>
+			<p>Resume - <a href="DavidRobideau_Resume_F2016.docx" target="_blank">.doc</a>  <a href="DavidRobideau_Resume_F2016.pdf" target="_blank">.pdf</a></p>
 		</div>
 		<div id="mail">
 			<a href="mailto:robideau@iastate.edu"><img src="Sprites/Mail-large.png" style="width:7%;height:7%"></a>
@@ -29,6 +29,10 @@
 		<div id="github">
 			<a href="http://www.github.com/robideau"><img src="Sprites/Github-large.png" style="width:7%;height:7%"></a>
 			<p>Github - <a href="http://www.github.com/robideau">robideau</a></p>
+		</div>
+		<div id="github">
+			<a href="https://www.linkedin.com/in/david-robideau-5972b1123"><img src="Sprites/linkedin-large.png" style="width:5%;height:5%"></a>
+			<p>Linkedin - <a href="https://www.linkedin.com/in/david-robideau-5972b1123">David Robideau</a></p>
 		</div>
 	</body>
 
@@ -45,7 +49,7 @@
 			<h4 id="navigation-text">Navigation ></h4>
 		</div>
 		<div id="legal">
-			(c) David Robideau 2015. All rights reserved.
+			(c) David Robideau 2016. All rights reserved.
 		</div>
 	</footer>
 
