--- a/projects.html
+++ b/projects.html
@@ -16,9 +16,12 @@
 			<h2>Projects</h2>
 		</div>
 		<div id="project-sprites">
-			<a href="musicshelf.html"><img src='Sprites/Rift-large.png' style="width:20%;height:20%" id="rift"></a>
-			<a href="rover.html"><img src='Sprites/Rover-large.png' style="width:20%;height:20%" id="rover"></a>
-			<a href="ethics.html"><img src='Sprites/Resume-large.png' style="width:20%;height:20%" id="essay"></a>
+			<a href="musicshelf.html"><img src='Sprites/Rift-large.png' style="width:13%;height:13%" id="rift"></a> <!-- 15/15 -->
+			<a href="rover.html"><img src='Sprites/Rover-large.png' style="width:13%;height:13%" id="rover"></a> <!-- 15/15 -->
+			<a href="mips-cpu.html"><img src='Sprites/CPU-large.png' style="width:8%;height:8%" id="cpu"></a> <!-- 10/10 -->
+			<a href="essays.html"><img src='Sprites/Resume-large.png' style="width:13%;height:13%" id="essay"></a> <!-- 15/15 -->
+			<a href="oilchange.html"><img src='Sprites/OC2-large.png' style="width:13%;height:13%" id="oilchange"></a> <!-- 15/15 -->
+			<a href="microsurgery.html"><img src='Sprites/medvr2-large.png' style="width:8%;height:8%" id="microsurgery"></a>	<!-- 15/15 -->
 		</div>
 		<div id="selector">
 			<h3 id="selector-text"></h3>
@@ -38,7 +41,7 @@
 			<h4 id="navigation-text">Navigation ></h4>
 		</div>
 		<div id="legal">
-			(c) David Robideau 2015. All rights reserved.
+			(c) David Robideau 2016. All rights reserved.
 		</div>
 	</footer>
 
