--- a/rover.html
+++ b/rover.html
@@ -21,9 +21,9 @@
 		<div id="project">
 			<p><a href="https://github.com/robideau/rover">Github</a></p>
 			<p>---</p>
-			<p id="about-text">This project is a bundle of software created for use with the <a href="http://store.irobot.com/education-research-robots/irobot-create-programmable-robot/family.jsp?categoryId=2591511&gclid=CMuL2vLeuckCFQ6QaQod_hsEJg">iRobot Create.</a> Rover contains basic function libraries for use with the on-board ATMega128 microcontroller, allowing for user control over movement, environment detection, audio output. Rover also allows for bluetooth control via a PuTTY terminal, and serial communication via the Atmel Studio development tool.</p>
+			<p id="about-text">This project is a software package created for use with the <a href="http://store.irobot.com/education-research-robots/irobot-create-programmable-robot/family.jsp?categoryId=2591511&gclid=CMuL2vLeuckCFQ6QaQod_hsEJg">iRobot Create.</a> Rover contains basic function libraries for use with the on-board ATMega128 microcontroller, allowing for user control over movement, environment detection, and audio output. Rover also allows for bluetooth control via a PuTTY terminal and serial communication via the Atmel Studio development tool.</p>
 			<p>---</p>
-			<p>Rover was written in C with a few AVR Assembly edits here and there. This project was my first foray into embedded development. I submitted Rover in April 2015 alongisde Colin Farrell and Nicholas Boos for my CprE 288 class. Using this software, we were able to successfully guide our robot through a random, unseen obstacle course.</p>
+			<p>Rover was written in C with a few AVR Assembly edits here and there. This project was my first foray into embedded development. I submitted Rover in April 2015 alongisde Colin Farrell and Nicholas Boos for my CprE 288 (Embedded Systems) class. Using this software, we were able to successfully guide our robot through a random, unseen obstacle course.</p>
 		</div>
 	</body>
 
@@ -40,7 +40,7 @@
 			<h4 id="navigation-text">Navigation ></h4>
 		</div>
 		<div id="legal">
-			(c) David Robideau 2015. All rights reserved.
+			(c) David Robideau 2016. All rights reserved.
 		</div>
 	</footer>
 
